# selenium

./: .bazelignore  .bazelrc  .bazelrc.remote  .skipped-tests  BUILD.bazel  MODULE.bazel  README.md  Rakefile  WORKSPACE  multitool.lock.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: bazel.yml  ci-dotnet.yml  ci-java.yml  ci-lint.yml  ci-python.yml  ci-rbe.yml  ci-renovate-rbe.yml  ci-ruby.yml  ci-rust.yml  ci.yml  label-commenter.yml  lock.yml  mirror-selenium-releases.yml  nightly.yml  pin-browsers.yml  stage-release.yml  stale.yml  update-documentation.yml
common/: BUILD.bazel  repositories.bzl
common/mirror/: selenium
common/src/web/: blank.html  service_worker.html
dotnet/: BUILD.bazel  defs.bzl  selenium-dotnet-version.bzl
dotnet/private/: BUILD.bazel
dotnet/src/support/: Selenium.WebDriver.Support.csproj
dotnet/src/webdriver/: BUILD.bazel  DriverService.cs  JavaScriptEngine.cs  RelativeBy.cs  Selenium.WebDriver.csproj  WebElement.cs
dotnet/src/webdriver/BiDi/: BiDi.cs  Broker.cs  Module.cs  Optional.cs  Subscription.cs  WebSocketTransport.cs
dotnet/src/webdriver/Firefox/: FirefoxExtension.cs  FirefoxProfile.cs
dotnet/src/webdriver/Internal/: ResourceUtilities.cs
dotnet/src/webdriver/Properties/: IsExternalInit.cs  NullableAttributes.cs  StringSyntaxAttribute.cs  StringSyntaxConstants.cs  TrimmingAttributes.cs
dotnet/test/common/: AlertsTest.cs  BUILD.bazel  CookieImplementationTest.cs  CorrectEventFiringTest.cs  DriverTestFixture.cs  ElementSelectingTest.cs  ExecutingJavascriptTest.cs  GetLogsTest.cs  I18Test.cs  PageLoadingTest.cs  ProxySettingTest.cs  StaleElementReferenceTest.cs  TakesScreenshotTest.cs  TestUtilities.cs  TextPagesTest.cs  TimeoutDriverOptionsTest.cs  WebElementWrapper.cs
dotnet/test/common/CustomDriverConfigs/: DevChannelChromeDriver.cs  DevChannelEdgeDriver.cs  EdgeInternetExplorerModeDriver.cs  NightlyChannelFirefoxDriver.cs  StableChannelChromeDriver.cs  StableChannelEdgeDriver.cs  StableChannelFirefoxDriver.cs
dotnet/test/common/CustomTestAttributes/: IgnoreBrowserAttribute.cs  IgnorePlatformAttribute.cs  IgnoreTargetAttribute.cs
dotnet/test/common/DevTools/: DevToolsSecurityTest.cs  DevToolsTargetTest.cs  DevToolsTestFixture.cs
dotnet/test/common/Environment/: DriverFactory.cs  DriverStartingEventArgs.cs  InlinePage.cs  RemoteSeleniumServer.cs  TestEnvironment.cs  TestWebServer.cs  UrlBuilder.cs
dotnet/test/common/Interactions/: BasicKeyboardInterfaceTest.cs  BasicMouseInterfaceTest.cs  BasicWheelInterfaceTest.cs  CombinedInputActionsTest.cs  DragAndDropTest.cs
dotnet/test/common/VirtualAuthn/: VirtualAuthenticatorTest.cs
dotnet/test/firefox/: FirefoxDriverTest.cs
dotnet/test/ie/: IeSpecificTests.cs
dotnet/test/support/UI/: SelectBrowserTests.cs
java/: maven_install.json  version.bzl
javascript/atoms/: BUILD.bazel  action.js  device.js  dom.js  domcore.js  error.js  events.js  inject.js  keyboard.js  mouse.js  response.js  touchscreen.js  window.js
javascript/atoms/fragments/: BUILD.bazel
javascript/atoms/html5/: html5_browser.js  location.js
javascript/atoms/locators/: css.js  link_text.js  locators.js  relative.js  xpath.js
javascript/atoms/test/: action_test.html  attribute_test.html  child_locator_test.html  click_link_test.html  click_submit_test.html  click_test.html  clientrect_test.html  color_test.html  dom_test.html  drag_test.html  enabled_test.html  enter_submit_test.html  error_test.html  events_test.html  focus_test.html  frame_scroll_test.html  frame_size_test.html  frame_test.html  gestures_test.html  history_test.html  inject_test.html  interactable_size_test.html  keyboard_test.html  locator_test.html  mouse_test.html  opacity_test.html  orientation_test.html  overflow_test.html  property_test.html  relative_locator_test.html  response_test.html  scrolling_test.html  select_test.html  shown_test.html  style_test.html  svg_test.html  test_bootstrap.js  text_box_test.html  text_shadow_test.html  text_table_test.html  (+11 more)
javascript/atoms/test/html5/: appcache_test.html  database_test.html  location_test.html  nested_window_storage_test.html  no_manifest_appcache_test.html  shadow_dom_test.html  storage_test.html
javascript/chrome-driver/: BUILD.bazel
javascript/chrome-driver/test/: atoms_test.html  is_element_clickable_test.html  shadow_dom_test.html  test_bootstrap.js
javascript/grid-ui/: BUILD.bazel  jest.config.cjs  package.json
javascript/ie-driver/: BUILD.bazel
javascript/ie-driver/test/: test_bootstrap.js
javascript/private/: BUILD.bazel  closure_js_deps.bzl  closure_make_deps_wrapper.js  fragment.bzl  package.json  test_suite.bzl
javascript/selenium-webdriver/: BUILD.bazel  package.json
javascript/selenium-webdriver/test/: builder_test.js  logging_test.js  upload_test.js
javascript/selenium-webdriver/test/firefox/: options_test.js
javascript/webdriver/: BUILD.bazel
javascript/webdriver/atoms/: BUILD.bazel  attribute.js  element.js
javascript/webdriver/atoms/inject/: BUILD.bazel
javascript/webdriver/test/: test_bootstrap.js
javascript/webdriver/test/atoms/: element_test.html
py/: BUILD.bazel  conftest.py  generate.py  pyproject.toml  requirements.txt  requirements_lock.txt  tox.ini
py/docs/source/: api.rst  conf.py
py/private/: pytest.bzl
py/selenium/: __init__.py
py/selenium/common/: exceptions.py
py/selenium/webdriver/: __init__.py
py/selenium/webdriver/chrome/: service.py
py/selenium/webdriver/chromium/: options.py  service.py  webdriver.py
py/selenium/webdriver/common/: action_chains.py  log.py  options.py  print_page_options.py  proxy.py  service.py  utils.py  virtual_authenticator.py  webdriver.py
rb/: selenium-webdriver.gemspec
rb/lib/selenium/: server.rb
rb/spec/: rspec_matchers.rb
rust/: BUILD.bazel  Cargo.toml
rust/src/: downloads.rs  lib.rs  lock.rs  main.rs
rust/tests/: browser_download_tests.rs  browser_tests.rs
scripts/: BUILD.bazel  ij-win.bazelproject  update_py_dependencies.sh
scripts/github-actions/: check-format.sh  collect-test-logs.sh  rerun-failures.sh
(+473 files in other folders)
