load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//common:browsers.bzl", "chrome_data", "firefox_data")
load("//java:browsers.bzl", "chrome_jvm_flags", "firefox_jvm_flags")
load("//java:defs.bzl", "artifact")
load("@supply_chain_tools//examples/sample_reports:licenses_used.bzl", "licenses_used")
load("@supply_chain_tools//sbom:sbom.bzl", "sbom")
load("@supply_chain_tools//sbom:spdx.bzl", "spdx")

exports_files([
    "package.json",
    "pnpm-workspace.yaml",
])

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "license",
    srcs = [
        "LICENSE",
        "NOTICE",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "rakefile",
    srcs = [
        "Rakefile",
    ],
    visibility = ["//rb:__subpackages__"],
)

alias(
    name = "grid",
    actual = "//java/src/org/openqa/selenium/grid:executable-grid",
)

alias(
    name = "pinned-grid",
    actual = "//java/src/org/openqa/selenium/grid:pinned-grid",
)

alias(
    name = "debug-server",
    actual = "//java/test/org/openqa/selenium/environment:appserver",
)

alias(
    name = "calcdeps",
    actual = "//javascript/atoms:deps",
)

alias(
    name = "selenium-server-standalone",
    actual = "//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar",
)

licenses_used(
    name = "license_info",
    #deps = ["//javascript/selenium-webdriver:prod-src-files"],
    deps = [":node_modules/selenium-webdriver"],
    #deps = [":server"],
    out = "license_info.json",
)

sbom(
    name = "sbom",
    target = ":node_modules/selenium-webdriver",
    #target = ":server",
)

spdx(
    name = "spdx",
    sbom = ":sbom",
    format = "yaml",
    out = "spdx.yml",
)

java_binary(
    name = "server",
    args = [
        "standalone",
        "--relax-checks",
        "true",
    ],
    data = chrome_data + firefox_data,
    jvm_flags = chrome_jvm_flags + firefox_jvm_flags,
    main_class = "org.openqa.selenium.grid.Bootstrap",
    runtime_deps = [
        "//java/src/org/openqa/selenium/grid",
        artifact("org.slf4j:slf4j-jdk14"),
    ],
)

npm_link_package(
    name = "node_modules/selenium-webdriver",
    src = "//javascript/selenium-webdriver",
)

platform(
    name = "rosetta",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
    tags = [
        "manual",
    ],
)
